Overflow-x set to hidden to avoid horizontal scroll-bars.

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -13,6 +13,7 @@
 body {
 	background-color: #E1E1E1;
 	background: repeat url("../assets/background.png");
+	overflow-x: hidden;
 }
 
 body:before {
